<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bloodbank.Home1Activity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gallery"
        android:orderInCategory="100"
        android:title="@string/upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alert"
        android:icon="@drawable/ic_warning_black_24dp"
        android:title="Emergency Contact"
        app:showAsAction="always"/>
</menu>
