<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:padding="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/volun2002" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunlogemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunlogpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/volunlogsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/volunlogregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/new_user_click_here_to_register"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/volunlogreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/forgot_password_click_here"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
