<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.kirandroid.bhojanforall.activities.recipients.RecipientLoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/hello_recip"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/volunteer" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reclogemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reclogpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/reclogbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reclogregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/new_recipient_click_here_to_register"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/reclogreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/forgot_password_click_here"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--ads:adUnitId="ca-app-pub-7341014042556519/2689368944"-->


    </LinearLayout>


</androidx.core.widget.NestedScrollView>