<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kirandroid.bhojanforall.activities.volunteer.UploadPhotosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context="com.kirandroid.bhojanforall.activities.volunteer.UploadPhotosActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/post_donated_photo"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <ImageView
            android:id="@+id/uplphoimage"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/upl" />

        <TextView
            android:id="@+id/uplphophoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/upload_photo"
            android:textColor="@color/white"
            android:textSize="19sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uplphoplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_place"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uplphonumberofpeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_of_people_benefitted"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uplphoupload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>