<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/doing_good_does_you_good"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/v1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunregnam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunregemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/email_id1"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunregpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunregphn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/volunregsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/volunregsignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/already_have_an_account_sign_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>